@@ -24,19 +24,19 @@
 # configuration script generated by Autoconf, you may include it under
 # the same distribution terms that you use for the rest of that program.
 
-# A wrapper for the GCC symlink-tree script, to build a symlink tree of all
+# A wrapper for the symlink-dirs script, to build a symlink tree of all
 # the component directories.
 
 # Usage:
 
 #   symlink-all.sh <unisrc> <component1> <component2> ...
 
-# The <unisrc> directory is assumed to exist. symlink-tree is run in that
+# The <unisrc> directory is assumed to exist. symlink-dirs is run in that
 # directory for each top level directory in each <componentn> directory.
 
 # We assume that the global environment variable ${ARC_GNU} is set, and that
 # the component directories  direct subdirs of it. We also assume that the
-# symlink-tree script can be found in ${ARC_GNU}/gcc
+# symlink-dirs script can be found in ${ARC_GNU}/toolchain
 
 
 # Change to the unisrc directory
@@ -49,7 +49,7 @@ echo "Symlink-all" ${unisrc}
 # Symlink each tree
 for component in $*
 do
-    if ! ${ARC_GNU}/gcc/symlink-tree ${ARC_GNU}/${component}
+    if ! ${ARC_GNU}/toolchain/symlink-dirs.sh ${ARC_GNU}/${component}
     then
 	exit 1
     fi
